[package]
name = "quartz-server"
version = "0.2.0"
edition = "2021"
description = "Libquartz server"
author = "Bultek <help@bultek.com.ua>"
license = "BSD-2-Clause"
keywords = ["libquartz", "server"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json", "tls"]}
serde = "1.0.137"
serde_json = "1.0.81"
[dependencies.tokio]
version = "1.19"
features = ["full"]
